Prevent the file browser buttons scrolling off-screen.

--- a/src/container/app.scss
+++ b/src/container/app.scss
@@ -22,6 +22,10 @@ html, body {
 .fullHeight {
   height: 100%;
   overflow: auto;
+
+  &.noOverflow {
+    overflow: hidden;
+  }
 }
 
 #root {
