--- a/src/presentation/rubberBandGroup.scss
+++ b/src/presentation/rubberBandGroup.scss
@@ -1,5 +1,5 @@
 .rubberBandGroup {
-  min-height: 100%;
+  height: 100%;
   user-select: none;
   overflow: hidden;
 }
